style: change css rule register popup

--- a/OventinTS/src/index.css
+++ b/OventinTS/src/index.css
@@ -10,6 +10,7 @@
     --primary-blue: #005aab; /* Màu xanh dương chính */
     --dark-blue: #004a8d;
     --light-blue: #e6f3ff;
+    --normal-blue: #233da3;
     --text-color: #ffffff;
     --menu-bar-height: 70px; /* Tăng chiều cao để có không gian */
     --menu-item-size: 80px;
