feat: add popup OTP

--- a/OventinTS/src/index.css
+++ b/OventinTS/src/index.css
@@ -41,7 +41,7 @@ body {
        2. Lớp giữa: Ảnh nền chính, cover toàn bộ màn hình, không lặp.
        3. Lớp dưới cùng: Màu gradient làm fallback.
     */
-    background-image: url(''), url(''), radial-gradient(circle, #dbbe7a 0%, #ffab7c 20%, #f95a02 100%);
+    background-image: url(''), url(''), radial-gradient(circle, #dbbe7a 0%, #d19439 20%, #f85a00 100%);
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: center top, top, center;
     /* Kích thước:
