style: change color

--- a/OventinTS/src/index.css
+++ b/OventinTS/src/index.css
@@ -42,7 +42,7 @@ body {
        3. Lớp dưới cùng: Màu gradient làm fallback.
        bg-gradient-to-b from-[rgb(175,194,11)] to-[rgb(255,156,7)]
     */
-    background-image: url(''), url('/static/fire.png'), radial-gradient(circle, #dbbe7a 0%, rgb(175,194,11) 20%, rgb(255,156,7) 100%);
+    background-image: url(''), url('/static/fire.png'), radial-gradient(circle, #2A7B9B 5%, #57C785 40%,  #A8ED53 100%);
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: center bottom, top, center;
     /* Kích thước:
