feat: add Prize into header

--- a/OventinTS/src/index.css
+++ b/OventinTS/src/index.css
@@ -82,8 +82,6 @@ header {
     margin-top: 80px;
 }
 
-
-
 .nav-button {
     background: rgb(35, 61, 163);
     color: #fff;
@@ -113,7 +111,8 @@ main {
     height: auto;
     overflow: hidden;
     flex-direction: column  ;
-    margin-top: 50px;
+    padding-top: 50px;
+    min-height: 100vh;
 }
 
 .title-down{
